# axum-vehicle-manager-app

./: Cargo.toml
src/: main.rs  vehicle.rs
