[package]
name = "vehicle-manager-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.9", features = ["http2","macros","ws"]}
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4"] }


